--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,12 @@ services:
     image: nginx:1.18.0
     container_name: nginx
     ports:
-    - "20080:80"
+    - "80:80"
     volumes:
     - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    - ./nginx/conf.d:/etc/nginx/conf.d
+    extra_hosts:
+    - "host.docker.internal:host-gateway"
 
   mosquitto:
     image: eclipse-mosquitto:2.0.11
