refactor: independent store for vuex.
independent vuex to a new module store,
increase scalability to deal with different APIs.

issue #benson 008

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,4 +21,4 @@ services:
     volumes:
       - ./mosquitto/config:/mosquitto/config
       - ./mosquitto/data:/mosquitto/data
-      - ./mosquitto/logs:/mosquitto/log
+      - ./mosquitto/log:/mosquitto/log
