--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,3 +22,29 @@ services:
       - ./mosquitto/config:/mosquitto/config
       - ./mosquitto/data:/mosquitto/data
       - ./mosquitto/log:/mosquitto/log
+
+  mysql:
+    image: mysql:8.0-debian
+    container_name: database
+    environment:
+      TZ: "Asia/Taipei"
+      # - MYSQL_RANDOM_ROOT_PASSWORD: "yes"
+      MYSQL_ROOT_PASSWORD: "12345678"
+      MYSQL_DATABASE: automeow
+    volumes:
+      - ./database/mysql:/var/lib/mysql
+      - ./database/init:/docker-entrypoint-initdb.d
+    ports:
+      - 3306:3306
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    container_name: phpmyadmin
+    depends_on:
+      - database
+    environment:
+      TZ: "Asia/Taipei"
+      PMA_HOST: database
+      PMA_PORT: 3306
+    ports:
+      - "9080:80"
