--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     - "80:80"
     volumes:
     - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-    - ./nginx/conf.d:/etc/nginx/conf.d
+    - ./nginx/conf.d/:/etc/nginx/conf.d/
     extra_hosts:
     - "host.docker.internal:host-gateway"
 
@@ -19,9 +19,9 @@ services:
       - "1883:1883"
       - "9001:9001"
     volumes:
-      - ./mosquitto/config:/mosquitto/config
-      - ./mosquitto/data:/mosquitto/data
-      - ./mosquitto/log:/mosquitto/log
+      - ./mosquitto/config/:/mosquitto/config/
+      - ./mosquitto/data/:/mosquitto/data/
+      - ./mosquitto/log/:/mosquitto/log/
 
   mysql:
     image: mysql:8.0-debian
@@ -32,8 +32,8 @@ services:
       MYSQL_ROOT_PASSWORD: "12345678"
       MYSQL_DATABASE: automeow
     volumes:
-      - ./database/mysql:/var/lib/mysql
-      - ./database/init:/docker-entrypoint-initdb.d
+      - ./database/mysql/:/var/lib/mysql/
+      - ./database/init/:/docker-entrypoint-initdb.d/
     ports:
       - 3306:3306
 
@@ -41,7 +41,7 @@ services:
     image: phpmyadmin/phpmyadmin
     container_name: phpmyadmin
     depends_on:
-      - database
+      - mysql
     environment:
       TZ: "Asia/Taipei"
       PMA_HOST: database
